# planet-crs-registry-client

./: README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
planet_crs_registry_client/: __init__.py
src/planet_crs_registry_client/: __init__.py
