[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planet-crs-registry-client"
description = "A client library for accessing planet_crs_registry"
requires-python = ">=3.9"
dynamic = ["version"]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
]
authors = [
    {name = "Dr. Andrew Annex", email="ama6fy@virginia.edu"}
]
keywords = ["CRS", "planetary", "REST"]
dependencies = [
    "httpx>=0.20.0,<0.28.0",
    "attrs>=21.3.0",
    "python-dateutil>=2.8.0,<3.0.0"
]

[project.urls]
Repository = "https://github.com/AndrewAnnex/planet-crs-registry-client.git"


[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "planet_crs_registry_client.__version__"}
